src/objects/MCD_Notes__c.object
<CustomObject>
    <description>MCD HIPAA Security model S-352518</description>
    <fields>
        <fullName>Contact_Report_Notes__c</fullName>
        <defaultValue>&quot;HIPAA Protected comments&quot;</defaultValue>
        <description>Comments with sensitive information related to an interaction with the prospect</description>
        <label>Contact Report Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Report</label>
        <referenceTo>Contact_Report__c</referenceTo>
        <relationshipLabel>MCD Notes</relationshipLabel>
        <relationshipName>MCD_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Strategy_Notes__c</fullName>
        <defaultValue>&quot;HIPAA Protected comments&quot;</defaultValue>
        <description>Comments with sensitive information related to prospect solicitation strategy</description>
        <label>Strategy Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Strategy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Strategy</label>
        <referenceTo>Strategy__c</referenceTo>
        <relationshipLabel>MCD Notes</relationshipLabel>
        <relationshipName>MCD_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>MCD Note</label>
    <nameField>
        <displayFormat>MCDN-{000000000}</displayFormat>
        <label>MCD Note</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MCD Notes</pluralLabel>
    <recordTypes>
        <fullName>Contact_Report</fullName>
        <active>true</active>
        <description>T-480587POC</description>
        <label>Contact Report</label>
    </recordTypes>
    <recordTypes>
        <fullName>Strategy</fullName>
        <active>true</active>
        <description>T-480587POC</description>
        <label>Strategy</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>